--- a/Movies/app/build.gradle
+++ b/Movies/app/build.gradle
@@ -61,7 +61,8 @@ dependencies {
     implementation "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0"
     // Kotlin serialization
     implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.0"
-
+    // Coil
+    implementation "io.coil-kt:coil-compose:2.1.0"
 
     testImplementation 'junit:junit:4.13.2'
 
