started incorporating adaptive layouts

--- a/Movies/app/build.gradle
+++ b/Movies/app/build.gradle
@@ -65,6 +65,8 @@ dependencies {
     implementation "io.coil-kt:coil-compose:2.2.2"
     // Paging 3
     implementation "androidx.paging:paging-compose:1.0.0-alpha18"
+    // Window Size Class
+    implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
 
     testImplementation 'junit:junit:4.13.2'
 
