--- a/Movies/app/build.gradle
+++ b/Movies/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation "androidx.paging:paging-compose:1.0.0-alpha18"
     // Window Size Class
     implementation "androidx.compose.material3:material3-window-size-class:1.0.1"
+    // Material 3
+    implementation "androidx.compose.material3:material3:1.0.1"
 
     testImplementation 'junit:junit:4.13.2'
 
