--- a/Inventory/app/build.gradle
+++ b/Inventory/app/build.gradle
@@ -65,4 +65,8 @@ dependencies {
     ksp "androidx.room:room-compiler:2.5.1"
     implementation "androidx.room:room-ktx:2.5.1"
 
+    // Testing
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.5.1"
+    androidTestImplementation "androidx.test.ext:junit:1.1.5"
+
 }
