--- a/BusSchedule/app/build.gradle
+++ b/BusSchedule/app/build.gradle
@@ -53,7 +53,12 @@ dependencies {
     implementation "androidx.compose.material:material"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0'
     implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
+    ksp "androidx.room:room-compiler:$room_version"
+
     debugImplementation "androidx.compose.ui:ui-tooling"
 }
