--- a/BusSchedule/app/src/main/AndroidManifest.xml
+++ b/BusSchedule/app/src/main/AndroidManifest.xml
@@ -15,9 +15,11 @@
   ~ limitations under the License.
   -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.example.busschedule">
 
     <application
+        android:name=".BusScheduleApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -28,7 +30,6 @@
         <activity
             android:name="com.example.busschedule.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.BusSchedule">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
