--- a/JuiceTracker/build.gradle
+++ b/JuiceTracker/build.gradle
@@ -18,8 +18,9 @@ buildscript {
     ext {
         compose_compiler_version = '1.4.0'
         nav_version = '2.5.3'
-        room_version = '2.5.0'
-        arch_lifecycle_version = '2.5.1'
+        room_version = '2.5.1'
+        arch_lifecycle_version = '2.6.1'
+        activity_compose_version = '1.7.1'
     }
 }
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
