--- a/JuiceTrackerCompose/app/build.gradle
+++ b/JuiceTrackerCompose/app/build.gradle
@@ -60,8 +60,8 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2023.01.00')
 
     implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.activity:activity-compose:1.6.1'
-    implementation 'androidx.core:core-ktx:1.9.0'
+    implementation 'androidx.activity:activity-compose:1.7.1'
+    implementation 'androidx.core:core-ktx:1.10.0'
     implementation "androidx.compose.material:material"
     implementation "androidx.compose.ui:ui"
     implementation "androidx.compose.ui:ui-tooling-preview"
@@ -69,6 +69,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-viewmodel-compose:$arch_lifecycle_version"
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation "com.google.android.gms:play-services-ads:22.0.0"
+
     ksp "androidx.room:room-compiler:$room_version"
     debugImplementation "androidx.compose.ui:ui-tooling"
 }
