--- a/JuiceTrackerCompose/app/src/main/AndroidManifest.xml
+++ b/JuiceTrackerCompose/app/src/main/AndroidManifest.xml
@@ -26,10 +26,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.JuiceTracker"
         tools:targetApi="33">
+        <meta-data
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
+            android:value="ca-app-pub-3940256099942544~3347511713" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.JuiceTracker.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
